syntax = "proto3";

option csharp_namespace = "BookWorm.Catalog.Grpc";

package CatalogApi;

service Book {
    rpc GetBook(BookRequest) returns (BookResponse);
    rpc GetBookStatus(BookStatusRequest) returns (BookStatusResponse);
}

message BookRequest {
    string bookId = 1;
}

message BookResponse {
    BookItem book = 1;
}

message BookStatusRequest {
    string bookId = 1;
}

message BookStatusResponse {
    BookStatus bookStatus = 1;
}

message BookItem {
    string id = 1;
    string name = 2;
    double price = 3;
    double priceSale = 4;
}

message BookStatus {
    string id = 1;
    string status = 2;
}